objects/Setting__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <description>This should contain JSON formatted data for each setting record. The JSON object will vary from setting to setting.</description>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field capture all the information about the settings, what are the dependent functions and list of dependencies  we have.</description>
        <inlineHelpText>This field capture all the information about the settings, what are the dependent functions and list of dependencies  we have.</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Destination_Object__c</fullName>
        <description>API Name of the Destination Object to which Field Mapping is happening.</description>
        <label>Destination Object</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <description>API Name of the Source Object from which Field Mapping is happening.</description>
        <label>Source Object</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of the Settings, if it is Field Mappings, it will contain mapping of source object to destination object in JSON format.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Mappings</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>This field is unique field so set value of this field to make the record unique in the system.</description>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>We are creating object for Settings instead of using Custom Object because we need to store larger size of data which Custom Setting does not support. e.g. Mapping of Fields from Contact to Lead etc. which may go beyond 255 characters. 

It will not use caching but give more flexibility for coding.</description>
    <label>Sales Console Setting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Console Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>Unique_Key__c</columns>
        <columns>Source_Object__c</columns>
        <columns>Destination_Object__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>